--- a/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
@@ -189,5 +189,6 @@
   "mn9:56-58.5": "तब आदरणीयो, आर्यसाधक सम्यक् दृष्टिवान कहेलाता है, जिसकी दृष्टि सीधी है, जिसे आर्यधर्म में अटूट श्रद्धा है, और जो सद्धर्म में आ पहुंचा है।",
   "mn9:56-58.6": "आदरणीयो, चैतन्य क्या है, चैतन्य का उदय क्या है, चैतन्य का निरोध क्या है, चैतन्य के निरोध की ओर ले जानेवाला मार्ग क्या है?",
   "mn9:56-58.7": "आदरणीयो, छह प्रकार के चैतन्य होते हैं—",
-  "mn9:56-58.8": "चक्षु चैतन्य, कर्ण चैतन्य, नाक चैतन्य, जीभ चैतन्य, काया चैतन्य, मनो चैतन्य।"
+  "mn9:56-58.8": "चक्षु चैतन्य, कर्ण चैतन्य, नाक चैतन्य, जीभ चैतन्य, काया चैतन्य, मनो चैतन्य।",
+  "mn9:56-58.9": "संस्कार के उदय के साथ चैतन्य का उदय होता है, संस्कार के निरोध के साथ चैतन्य का निरोध होता है, चैतन्य के निरोध की ओर ले जानेवाला मार्ग वह केवल आर्यअष्टांग मार्ग है—"
 }
