--- a/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
@@ -190,5 +190,6 @@
   "mn9:56-58.6": "आदरणीयो, चैतन्य क्या है, चैतन्य का उदय क्या है, चैतन्य का निरोध क्या है, चैतन्य के निरोध की ओर ले जानेवाला मार्ग क्या है?",
   "mn9:56-58.7": "आदरणीयो, छह प्रकार के चैतन्य होते हैं—",
   "mn9:56-58.8": "चक्षु चैतन्य, कर्ण चैतन्य, नाक चैतन्य, जीभ चैतन्य, काया चैतन्य, मनो चैतन्य।",
-  "mn9:56-58.9": "संस्कार के उदय के साथ चैतन्य का उदय होता है, संस्कार के निरोध के साथ चैतन्य का निरोध होता है, चैतन्य के निरोध की ओर ले जानेवाला मार्ग वह केवल आर्यअष्टांग मार्ग है—"
+  "mn9:56-58.9": "संस्कार के उदय के साथ चैतन्य का उदय होता है, संस्कार के निरोध के साथ चैतन्य का निरोध होता है, चैतन्य के निरोध की ओर ले जानेवाला मार्ग वह केवल आर्यअष्टांग मार्ग है—",
+  "mn9:56-58.10": "सम्यक् दृष्टि, सम्यक् संकल्प, सम्यक् वाणी, सम्यक् कार्य, सम्यक् आजीविका, सम्यक् उद्यम, सम्यक् स्मृति, सम्यक् समाधि।"
 }
