--- a/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
@@ -198,5 +198,6 @@
   "mn9:60-62.3": "“लेकिन आदरणीय, कोइ दूसरी रीति है जिस से आर्यसाधक सम्यक् दृष्टिवान कहेलाता है, जिसकी दृष्टि सीधी है, जिसे आर्यधर्म में अटूट श्रद्धा है, और जो सद्धर्म में आ पहुंचा है”?",
   "mn9:60-62.4": "“है, आदरणीयो।",
   "mn9:60-62.5": "जब आर्यसाधक संस्कार को समझता है, संस्कार के उदय को समझता है, संस्कार के निरोध को समझता है, संस्कार के निरोध की ओर ले जानेवाले मार्ग को समझता है—",
-  "mn9:60-62.6": "तब आदरणीयो, आर्यसाधक सम्यक् दृष्टिवान कहेलाता है, जिसकी दृष्टि सीधी है, जिसे आर्यधर्म में अटूट श्रद्धा है, और जो सद्धर्म में आ पहुंचा है।"
+  "mn9:60-62.6": "तब आदरणीयो, आर्यसाधक सम्यक् दृष्टिवान कहेलाता है, जिसकी दृष्टि सीधी है, जिसे आर्यधर्म में अटूट श्रद्धा है, और जो सद्धर्म में आ पहुंचा है।",
+  "mn9:60-62.7": "आदरणीयो, संस्कार क्या है, संस्कार का उदय क्या है, संस्कार का निरोध क्या है, संस्कार के निरोध की ओर ले जानेवाला मार्ग क्या है?"
 }
