--- a/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
@@ -202,5 +202,6 @@
   "mn9:60-62.7": "आदरणीयो, संस्कार क्या है, संस्कार का उदय क्या है, संस्कार का निरोध क्या है, संस्कार के निरोध की ओर ले जानेवाला मार्ग क्या है?",
   "mn9:60-62.8": "आदरणीयो, तीन प्रकार के संस्कार होते हैं—",
   "mn9:60-62.9": "काया संस्कार, वाणी संस्कार, चित्त संस्कार।",
-  "mn9:60-62.10": "अविद्या के उदय के साथ संस्कार का उदय होता है, अविद्या के निरोध के साथ संस्कार का निरोध होता है, संस्कार के निरोध की ओर ले जानेवाला मार्ग वह केवल आर्यअष्टांग मार्ग है—"
+  "mn9:60-62.10": "अविद्या के उदय के साथ संस्कार का उदय होता है, अविद्या के निरोध के साथ संस्कार का निरोध होता है, संस्कार के निरोध की ओर ले जानेवाला मार्ग वह केवल आर्यअष्टांग मार्ग है—",
+  "mn9:60-62.11": "सम्यक् दृष्टि, सम्यक् संकल्प, सम्यक् वाणी, सम्यक् कार्य, सम्यक् आजीविका, सम्यक् उद्यम, सम्यक् स्मृति, सम्यक् समाधि।"
 }
