--- a/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
@@ -203,5 +203,6 @@
   "mn9:60-62.8": "आदरणीयो, तीन प्रकार के संस्कार होते हैं—",
   "mn9:60-62.9": "काया संस्कार, वाणी संस्कार, चित्त संस्कार।",
   "mn9:60-62.10": "अविद्या के उदय के साथ संस्कार का उदय होता है, अविद्या के निरोध के साथ संस्कार का निरोध होता है, संस्कार के निरोध की ओर ले जानेवाला मार्ग वह केवल आर्यअष्टांग मार्ग है—",
-  "mn9:60-62.11": "सम्यक् दृष्टि, सम्यक् संकल्प, सम्यक् वाणी, सम्यक् कार्य, सम्यक् आजीविका, सम्यक् उद्यम, सम्यक् स्मृति, सम्यक् समाधि।"
+  "mn9:60-62.11": "सम्यक् दृष्टि, सम्यक् संकल्प, सम्यक् वाणी, सम्यक् कार्य, सम्यक् आजीविका, सम्यक् उद्यम, सम्यक् स्मृति, सम्यक् समाधि।",
+  "mn9:63.1": "इस प्रकार, आदरणीयो, जब आर्यसाधक संस्कार को समझता है, संस्कार के उदय को समझता है, संस्कार के निरोध को समझता है, संस्कार के निरोध की ओर ले जानेवाले मार्ग को समझता है, तब वह संपूर्ण तौर पर लालसा की आंतरिक मनोवृत्ति का त्याग करता है, घृणा की आंतरिक मनोवृत्ति का त्याग करता है, ‘मैं हुं’ यह दृष्टि और अभिमान की आंतरिक मनोवृत्ति का विनाश करता है, और अज्ञान का त्याग कर के, ज्ञान का उदय कर के यहीं वर्तमान में दुःख का अंत करता है—"
 }
