--- a/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
@@ -210,5 +210,6 @@
   "mn9:64-66.2": "“लेकिन आदरणीय, कोइ दूसरी रीति है जिस से आर्यसाधक सम्यक् दृष्टिवान कहेलाता है, जिसकी दृष्टि सीधी है, जिसे आर्यधर्म में अटूट श्रद्धा है, और जो सद्धर्म में आ पहुंचा है”?",
   "mn9:64-66.3": "“है, आदरणीयो।",
   "mn9:64-66.4": "जब आर्यसाधक अविद्या को समझता है, अविद्या के उदय को समझता है, अविद्या के निरोध को समझता है, अविद्या के निरोध की ओर ले जानेवाले मार्ग को समझता है—",
-  "mn9:64-66.5": "तब आदरणीयो, आर्यसाधक सम्यक् दृष्टिवान कहेलाता है, जिसकी दृष्टि सीधी है, जिसे आर्यधर्म में अटूट श्रद्धा है, और जो सद्धर्म में आ पहुंचा है।"
+  "mn9:64-66.5": "तब आदरणीयो, आर्यसाधक सम्यक् दृष्टिवान कहेलाता है, जिसकी दृष्टि सीधी है, जिसे आर्यधर्म में अटूट श्रद्धा है, और जो सद्धर्म में आ पहुंचा है।",
+  "mn9:64-66.6": "आदरणीयो, अविद्या क्या है, अविद्या का उदय क्या है, अविद्या का निरोध क्या है, अविद्या के निरोध की ओर ले जानेवाला मार्ग क्या है?"
 }
