--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1446,59 +1446,59 @@
   "pli-tv-kd9:7.20.9": "in a legitimate-like way and with an incomplete assembly. … ",
   "pli-tv-kd9:7.20.10": "in a legitimate-like way but with a unanimous assembly. ",
   "pli-tv-kd9:7.20.11": "The Sangha there starts disputing: ",
-  "pli-tv-kd9:7.20.12": "‘It was an illegitimate procedure done with an incomplete assembly’, ‘it was an illegitimate procedure done unanimously’, ‘it was a legitimate procedure done with an incomplete assembly’, ‘it was a legitimate-like procedure done with an incomplete assembly’, ‘it was a legitimate-like procedure done unanimously’, ‘the procedure is invalid, it was badly done, and it needs to be done again.’ ",
+  "pli-tv-kd9:7.20.12": "‘It was an illegitimate procedure done with an incomplete assembly,’ ‘It was an illegitimate procedure done with a unanimous assembly,’ ‘It was a legitimate procedure done with an incomplete assembly,’ ‘It was a legitimate-like procedure done with an incomplete assembly,’ ‘It was a legitimate-like procedure done with a unanimous assembly,’ ‘The procedure is invalid, it was badly done, and it needs to be done again.’ ",
   "pli-tv-kd9:7.20.13": "Those monks who say, ",
-  "pli-tv-kd9:7.20.14": "‘It was a legitimate-like legal procedure done unanimously,’ and those who say, ",
+  "pli-tv-kd9:7.20.14": "‘It was a legitimate-like legal procedure done with a unanimous assembly,’ and those who say, ",
   "pli-tv-kd9:7.20.15": "‘The legal procedure is invalid, it was badly done, and it needs to be done again,’ they are the ones there who speak in accordance with the Teaching.” ",
   "pli-tv-kd9:7.20.16": "These five contracted sections, too, are finished. ",
   "pli-tv-kd9:7.20.17.0": "32. Discussion of the lifting of the legal procedure of banishment ",
-  "pli-tv-kd9:7.20.17.1": "“It may be that the Sangha has done a legal procedure of banishment against a monk, that he then conducts himself properly and suitably so as to deserve to be released, and that he then asks for the lifting of that procedure of banishment. ",
+  "pli-tv-kd9:7.20.17.1": "“It may be that the Sangha has done a legal procedure of banishment against a monk, that he then conducts himself properly and suitably so as to deserve to be released, and that he then asks for the lifting of that procedure. ",
   "pli-tv-kd9:7.20.18": "The monks consider, ",
   "pli-tv-kd9:7.20.19": "‘The Sangha has done a legal procedure of banishment against this monk. He has conducted himself properly and suitably so as to deserve to be released, and now asks for the lifting of that procedure. ",
   "pli-tv-kd9:7.20.20": "Well then, let’s lift that procedure.’ ",
   "pli-tv-kd9:7.20.21": "They lift that procedure—",
   "pli-tv-kd9:7.20.22": "illegitimately and with an incomplete assembly. … ",
-  "pli-tv-kd9:7.20.23": "illegitimately but unanimous. … ",
+  "pli-tv-kd9:7.20.23": "illegitimately but with a unanimous assembly. … ",
   "pli-tv-kd9:7.20.24": "legitimately but with an incomplete assembly. … ",
   "pli-tv-kd9:7.20.25": "in a legitimate-like way and with an incomplete assembly. … ",
-  "pli-tv-kd9:7.20.26": "in a legitimate-like way but unanimous. ",
+  "pli-tv-kd9:7.20.26": "in a legitimate-like way but with a unanimous assembly. ",
   "pli-tv-kd9:7.20.27": "The Sangha there starts disputing: ",
-  "pli-tv-kd9:7.20.28": "‘It was an illegitimate procedure done with an incomplete assembly’, ‘it was an illegitimate procedure done with a unanimous assembly’, ‘it was a legitimate procedure done with an incomplete assembly’, ‘it was a legitimate-like procedure done with an incomplete assembly’, ‘it was a legitimate-like procedure done unanimously’, ‘the procedure is invalid, it was badly done, and it needs to be done again.’ ",
+  "pli-tv-kd9:7.20.28": "‘It was an illegitimate procedure done with an incomplete assembly,’ ‘It was an illegitimate procedure done with a unanimous assembly,’ ‘It was a legitimate procedure done with an incomplete assembly,’ ‘It was a legitimate-like procedure done with an incomplete assembly,’ ‘It was a legitimate-like procedure done with a unanimous assembly,’ ‘The procedure is invalid, it was badly done, and it needs to be done again.’ ",
   "pli-tv-kd9:7.20.29": "Those monks who say, ",
-  "pli-tv-kd9:7.20.30": "‘It was a legitimate-like legal procedure done unanimously,’ and those who say, ",
+  "pli-tv-kd9:7.20.30": "‘It was a legitimate-like legal procedure done with a unanimous assembly,’ and those who say, ",
   "pli-tv-kd9:7.20.31": "‘The legal procedure is invalid, it was badly done, and it needs to be done again,’ they are the ones there who speak in accordance with the Teaching.” ",
   "pli-tv-kd9:7.20.32": "These five contracted sections, too, are finished. ",
   "pli-tv-kd9:7.20.33.0": "33. Discussion of the lifting of the legal procedure of reconciliation ",
-  "pli-tv-kd9:7.20.33.1": "“It may be that the Sangha has done a legal procedure of reconciliation against a monk, that he then conducts himself properly and suitably so as to deserve to be released, and that he then asks for the lifting of that procedure of reconciliation. ",
+  "pli-tv-kd9:7.20.33.1": "“It may be that the Sangha has done a legal procedure of reconciliation against a monk, that he then conducts himself properly and suitably so as to deserve to be released, and that he then asks for the lifting of that procedure. ",
   "pli-tv-kd9:7.20.34": "The monks consider, ",
   "pli-tv-kd9:7.20.35": "‘The Sangha has done a legal procedure of reconciliation against this monk. He has conducted himself properly and suitably so as to deserve to be released, and now asks for the lifting of that procedure. ",
   "pli-tv-kd9:7.20.36": "Well then, let’s lift that procedure.’ ",
   "pli-tv-kd9:7.20.37": "They lift that procedure—",
   "pli-tv-kd9:7.20.38": "illegitimately and with an incomplete assembly. … ",
-  "pli-tv-kd9:7.20.39": "illegitimately but unanimous. … ",
+  "pli-tv-kd9:7.20.39": "illegitimately but with a unanimous assembly. … ",
   "pli-tv-kd9:7.20.40": "legitimately but with an incomplete assembly. … ",
   "pli-tv-kd9:7.20.41": "in a legitimate-like way and with an incomplete assembly. … ",
-  "pli-tv-kd9:7.20.42": "in a legitimate-like way but unanimous. ",
+  "pli-tv-kd9:7.20.42": "in a legitimate-like way but with a unanimous assembly. ",
   "pli-tv-kd9:7.20.43": "The Sangha there starts disputing: ",
-  "pli-tv-kd9:7.20.44": "‘It was an illegitimate procedure done with an incomplete assembly’, ‘it was an illegitimate procedure done unanimously’, ‘it was a legitimate procedure done with an incomplete assembly’, ‘it was a legitimate-like procedure done with an incomplete assembly’, ‘it was a legitimate-like procedure done unanimously’, ‘the procedure is invalid, it was badly done, and it needs to be done again.’ ",
+  "pli-tv-kd9:7.20.44": "‘It was an illegitimate procedure done with an incomplete assembly,’ ‘It was an illegitimate procedure done with a unanimous assembly,’ ‘It was a legitimate procedure done with an incomplete assembly,’ ‘It was a legitimate-like procedure done with an incomplete assembly,’ ‘It was a legitimate-like procedure done with a unanimous assembly,’ ‘The procedure is invalid, it was badly done, and it needs to be done again.’ ",
   "pli-tv-kd9:7.20.45": "Those monks who say, ",
-  "pli-tv-kd9:7.20.46": "‘It was a legitimate-like legal procedure done unanimously,’ and those who say, ",
+  "pli-tv-kd9:7.20.46": "‘It was a legitimate-like legal procedure done with a unanimous assembly,’ and those who say, ",
   "pli-tv-kd9:7.20.47": "‘The legal procedure is invalid, it was badly done, and it needs to be done again,’ ",
   "pli-tv-kd9:7.20.48": "they are the ones there who speak in accordance with the Teaching.” ",
   "pli-tv-kd9:7.20.49": "These five contracted sections, too, are finished. ",
   "pli-tv-kd9:7.20.50.0": "34. Discussion of the lifting of the legal procedure of ejection for not recognizing ",
-  "pli-tv-kd9:7.20.50.1": "“It may be that the Sangha has done a legal procedure of ejection for not recognizing an offense against a monk, that he then conducts himself properly and suitably so as to deserve to be released, and that he then asks for the lifting of that procedure of ejection. ",
+  "pli-tv-kd9:7.20.50.1": "“It may be that the Sangha has done a legal procedure of ejection against a monk for not recognizing an offense, that he then conducts himself properly and suitably so as to deserve to be released, and that he then asks for the lifting of that procedure. ",
   "pli-tv-kd9:7.20.51": "The monks consider, ",
-  "pli-tv-kd9:7.20.52": "‘The Sangha has done a legal procedure of ejection for not recognizing an offense against this monk. He has conducted himself properly and suitably so as to deserve to be released, and now asks for the lifting of that procedure. ",
+  "pli-tv-kd9:7.20.52": "‘The Sangha has done a legal procedure of ejection against this monk for not recognizing an offense. He has conducted himself properly and suitably so as to deserve to be released, and now asks for the lifting of that procedure. ",
   "pli-tv-kd9:7.20.53": "Well then, let’s lift that procedure.’ ",
   "pli-tv-kd9:7.20.54": "They lift that procedure—",
   "pli-tv-kd9:7.20.55": "illegitimately and with an incomplete assembly. … ",
-  "pli-tv-kd9:7.20.56": "illegitimately but unanimous. … ",
+  "pli-tv-kd9:7.20.56": "illegitimately but with a unanimous assembly. … ",
   "pli-tv-kd9:7.20.57": "legitimately but with an incomplete assembly. … ",
   "pli-tv-kd9:7.20.58": "in a legitimate-like way and with an incomplete assembly. … ",
-  "pli-tv-kd9:7.20.59": "in a legitimate-like way but unanimous. ",
+  "pli-tv-kd9:7.20.59": "in a legitimate-like way but with a unanimous assembly. ",
   "pli-tv-kd9:7.20.60": "The Sangha there starts disputing: ",
-  "pli-tv-kd9:7.20.61": "‘It was an illegitimate procedure done with an incomplete assembly’, ‘it was an illegitimate procedure done unanimously’, ‘it was a legitimate procedure done with an incomplete assembly’, ‘it was a legitimate-like procedure done with an incomplete assembly’, ‘it was a legitimate-like procedure done unanimously’, ‘the procedure is invalid, it was badly done, and it needs to be done again.’ ",
+  "pli-tv-kd9:7.20.61": "‘It was an illegitimate procedure done with an incomplete assembly,’ ‘It was an illegitimate procedure done with a unanimous assembly,’ ‘It was a legitimate procedure done with an incomplete assembly,’ ‘It was a legitimate-like procedure done with an incomplete assembly,’ ‘It was a legitimate-like procedure done with a unanimous assembly,’ ‘The procedure is invalid, it was badly done, and it needs to be done again.’ ",
   "pli-tv-kd9:7.20.62": "Those monks who say, ",
   "pli-tv-kd9:7.20.63": "‘It was a legitimate-like legal procedure done unanimously,’ and those who say, ",
   "pli-tv-kd9:7.20.64": "‘The legal procedure is invalid, it was badly done, and it needs to be done again,’ they are the ones there who speak in accordance with the Teaching.” ",
