--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1513,7 +1513,7 @@
   "pli-tv-kd9:7.20.72": "illegitimately but with a unanimous assembly. … ",
   "pli-tv-kd9:7.20.73": "legitimately but with an incomplete assembly. … ",
   "pli-tv-kd9:7.20.74": "in a legitimate-like way and with an incomplete assembly. … ",
-  "pli-tv-kd9:7.20.75": "in a legitimate-like way but unanimous. ",
+  "pli-tv-kd9:7.20.75": "in a legitimate-like way but with a unanimous assembly. ",
   "pli-tv-kd9:7.20.76": "The Sangha there starts disputing: ",
   "pli-tv-kd9:7.20.77": "‘It was an illegitimate procedure done with an incomplete assembly’, ‘it was an illegitimate procedure done unanimously’, ‘it was a legitimate procedure done with an incomplete assembly’, ‘it was a legitimate-like procedure done with an incomplete assembly’, ‘it was a legitimate-like procedure done unanimously’, ‘the procedure is invalid, it was badly done, and it needs to be done again.’ ",
   "pli-tv-kd9:7.20.78": "Those monks who say, ",
