--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1515,9 +1515,9 @@
   "pli-tv-kd9:7.20.74": "in a legitimate-like way and with an incomplete assembly. … ",
   "pli-tv-kd9:7.20.75": "in a legitimate-like way but with a unanimous assembly. ",
   "pli-tv-kd9:7.20.76": "The Sangha there starts disputing: ",
-  "pli-tv-kd9:7.20.77": "‘It was an illegitimate procedure done with an incomplete assembly’, ‘it was an illegitimate procedure done unanimously’, ‘it was a legitimate procedure done with an incomplete assembly’, ‘it was a legitimate-like procedure done with an incomplete assembly’, ‘it was a legitimate-like procedure done unanimously’, ‘the procedure is invalid, it was badly done, and it needs to be done again.’ ",
+  "pli-tv-kd9:7.20.77": "‘It was an illegitimate procedure done with an incomplete assembly,’ ‘It was an illegitimate procedure done with a unanimous assembly,’ ‘It was a legitimate procedure done with an incomplete assembly,’ ‘It was a legitimate-like procedure done with an incomplete assembly,’ ‘It was a legitimate-like procedure done with a unanimous assembly,’ ‘The procedure is invalid, it was badly done, and it needs to be done again.’ ",
   "pli-tv-kd9:7.20.78": "Those monks who say, ",
-  "pli-tv-kd9:7.20.79": "‘It was a legitimate-like legal procedure done unanimously,’ and those who say, ",
+  "pli-tv-kd9:7.20.79": "‘It was a legitimate-like legal procedure done with a unanimous assembly,’ and those who say, ",
   "pli-tv-kd9:7.20.80": "‘The legal procedure is invalid, it was badly done, and it needs to be done again,’ they are the ones there who speak in accordance with the Teaching.” ",
   "pli-tv-kd9:7.20.81": "These five contracted sections, too, are finished. ",
   "pli-tv-kd9:7.20.82.0": "36. Discussion of the lifting of the legal procedure of ejection for not giving up a bad view ",
