--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -51,5 +51,6 @@
   "sn22.55:8.3": "Er versteht Wahrnehmung … ",
   "sn22.55:8.4": "Er versteht Entscheidungen … ",
   "sn22.55:8.5": "Er versteht Bewusstsein, das unbeständig ist, wahrhaftig als unbeständig. ",
-  "sn22.55:8.6": "Er versteht Form … Gefühl … Wahrnehmung … Entscheidungen … Bewusstsein, die alle Leiden sind, wahrhaftig als Leiden. "
+  "sn22.55:8.6": "Er versteht Form … Gefühl … Wahrnehmung … Entscheidungen … Bewusstsein, die alle Leiden sind, wahrhaftig als Leiden. ",
+  "sn22.55:8.7": "Er versteht Form … Gefühl … Wahrnehmung … Entscheidungen … Bewusstsein, die alle nicht-selbst sind, wahrhaftig als nicht-selbst. "
 }
