--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -53,5 +53,6 @@
   "sn22.55:8.5": "Er versteht Bewusstsein, das unbeständig ist, wahrhaftig als unbeständig. ",
   "sn22.55:8.6": "Er versteht Form … Gefühl … Wahrnehmung … Entscheidungen … Bewusstsein, die alle Leiden sind, wahrhaftig als Leiden. ",
   "sn22.55:8.7": "Er versteht Form … Gefühl … Wahrnehmung … Entscheidungen … Bewusstsein, die alle nicht-selbst sind, wahrhaftig als nicht-selbst. ",
-  "sn22.55:8.8": "Er versteht Form … Gefühl … Wahrnehmung … Entscheidungen … Bewusstsein, die alle bedingt sind, wahrhaftig als bedingt. "
+  "sn22.55:8.8": "Er versteht Form … Gefühl … Wahrnehmung … Entscheidungen … Bewusstsein, die alle bedingt sind, wahrhaftig als bedingt. ",
+  "sn22.55:8.9": "Er versteht wahrhaftig, dass Form verschwinden wird. "
 }
