--- a/translation/de/sabbamitta/sutta/an/an5/an5.168_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.168_translation-de-sabbamitta.json
@@ -6,7 +6,7 @@
   "an5.168:1.2": "„Werte Freunde, ein unmoralischer Mensch, jemand ohne sittliches Verhalten, hat eine wesentliche Bedingung für rechte Versenkung zerstört. ",
   "an5.168:1.3": "Wenn es keine rechte Versenkung gibt, hat jemand ohne rechte Versenkung eine wesentliche Bedingung für wirkliches Erkennen und Sehen zerstört. ",
   "an5.168:1.4": "Wenn es kein wirkliches Erkennen und Sehen gibt, hat jemand ohne wirkliches Erkennen und Sehen eine wesentliche Bedingung für Ernüchterung und Schwinden der Leidenschaft zerstört. ",
-  "an5.168:1.5": "Wenn es keine Ernüchterung und kein Schwinden der Leidenschaft gibt, hat jemand ohne Ernüchterung und Schwinden der Leidenschaft eine wesentliche Bedingung für das Wissen und Sehen der Freiheit zerstört. ",
+  "an5.168:1.5": "Wenn es keine Ernüchterung und kein Schwinden der Leidenschaft gibt, hat jemand ohne Ernüchterung und Schwinden der Leidenschaft eine wesentliche Bedingung für das Erkennen und Sehen der Freiheit zerstört. ",
   "an5.168:1.6": "Wie ein Baum ohne Zweige und Laubwerk: ",
   "an5.168:1.7": "Seine Schösslinge, seine Rinde, sein Weich- und Kernholz entwickeln sich nicht zur Fülle. ",
   "an5.168:1.8": "Ebenso hat ein unmoralischer Mensch, jemand ohne sittliches Verhalten, eine wesentliche Bedingung für rechte Versenkung zerstört. ",
