--- a/translation/de/sabbamitta/sutta/an/an7/an7.65_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.65_translation-de-sabbamitta.json
@@ -15,7 +15,7 @@
   "an7.65:1.11": "Wenn es kein sittliches Verhalten gibt, hat jemand ohne sittliches Verhalten eine wesentliche Bedingung für rechte Versenkung zerstört. ",
   "an7.65:1.12": "Wenn es keine rechte Versenkung gibt, hat jemand ohne rechte Versenkung eine wesentliche Bedingung für wirkliches Erkennen und Sehen zerstört. ",
   "an7.65:1.13": "Wenn es kein wirkliches Erkennen und Sehen gibt, hat jemand ohne wirkliches Erkennen und Sehen eine wesentliche Bedingung für Ernüchterung und Schwinden der Leidenschaft zerstört. ",
-  "an7.65:1.14": "Wenn es keine Ernüchterung und kein Schwinden der Leidenschaft gibt, hat jemand ohne Ernüchterung und Schwinden der Leidenschaft eine wesentliche Bedingung für das Wissen und Sehen der Freiheit zerstört. ",
+  "an7.65:1.14": "Wenn es keine Ernüchterung und kein Schwinden der Leidenschaft gibt, hat jemand ohne Ernüchterung und Schwinden der Leidenschaft eine wesentliche Bedingung für das Erkennen und Sehen der Freiheit zerstört. ",
   "an7.65:2.1": "Wenn es Gewissen und Besonnenheit gibt, hat jemand, der Gewissen und Besonnenheit vervollkommnet hat, eine wesentliche Bedingung für die Zügelung der Sinne erfüllt. ",
   "an7.65:2.2": "Wenn es eine Zügelung der Sinne gibt, hat jemand, der die Zügelung der Sinne vervollkommnet hat, eine wesentliche Bedingung für sittliches Verhalten erfüllt. ",
   "an7.65:2.3": "Wenn es sittliches Verhalten gibt, hat jemand, der das sittliche Verhalten vervollkommnet hat, eine wesentliche Bedingung für rechte Versenkung erfüllt. ",
