--- a/translation/de/sabbamitta/sutta/an/an6/an6.50_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.50_translation-de-sabbamitta.json
@@ -10,7 +10,7 @@
   "an6.50:1.6": "Wie ein Baum ohne Zweige und Laubwerk: ",
   "an6.50:1.7": "Seine Schösslinge, seine Rinde, sein Weich- und Kernholz entwickeln sich nicht zur Fülle. ",
   "an6.50:1.8": "Ebenso hat, wenn es keine Zügelung der Sinne gibt, jemand ohne Zügelung der Sinne eine wesentliche Bedingung für sittliches Verhalten zerstört. … ",
-  "an6.50:1.9": "Wenn es keine Ernüchterung und kein Schwinden der Leidenschaft gibt, hat jemand ohne Ernüchterung und Schwinden der Leidenschaft eine wesentliche Bedingung für das Wissen und Sehen der Freiheit zerstört. ",
+  "an6.50:1.9": "Wenn es keine Ernüchterung und kein Schwinden der Leidenschaft gibt, hat jemand ohne Ernüchterung und Schwinden der Leidenschaft eine wesentliche Bedingung für das Erkennen und Sehen der Freiheit zerstört. ",
   "an6.50:2.1": "Wenn es eine Zügelung der Sinne gibt, hat jemand, der die Zügelung der Sinne vervollkommnet hat, eine wesentliche Bedingung für sittliches Verhalten erfüllt. ",
   "an6.50:2.2": "Wenn es sittliches Verhalten gibt, hat jemand, der das sittliche Verhalten vervollkommnet hat, eine wesentliche Bedingung für rechte Versenkung erfüllt. ",
   "an6.50:2.3": "Wenn es rechte Versenkung gibt, hat jemand, der rechte Versenkung vervollkommnet hat, eine wesentliche Bedingung für wirkliches Erkennen und Sehen erfüllt. ",
