--- a/translation/de/sabbamitta/sutta/an/an6/an6.50_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.50_translation-de-sabbamitta.json
@@ -15,7 +15,7 @@
   "an6.50:2.2": "Wenn es sittliches Verhalten gibt, hat jemand, der das sittliche Verhalten vervollkommnet hat, eine wesentliche Bedingung für rechte Versenkung erfüllt. ",
   "an6.50:2.3": "Wenn es rechte Versenkung gibt, hat jemand, der rechte Versenkung vervollkommnet hat, eine wesentliche Bedingung für wirkliches Erkennen und Sehen erfüllt. ",
   "an6.50:2.4": "Wenn es wirkliches Erkennen und Sehen gibt, hat jemand, der wirkliches Erkennen und Sehen vervollkommnet hat, eine wesentliche Bedingung für Ernüchterung und Schwinden der Leidenschaft erfüllt. ",
-  "an6.50:2.5": "Wenn es Ernüchterung und Schwinden der Leidenschaft gibt, hat jemand, der Ernüchterung und Schwinden der Leidenschaft vervollkommnet hat, eine wesentliche Bedingung für das Wissen und Sehen der Freiheit erfüllt. ",
+  "an6.50:2.5": "Wenn es Ernüchterung und Schwinden der Leidenschaft gibt, hat jemand, der Ernüchterung und Schwinden der Leidenschaft vervollkommnet hat, eine wesentliche Bedingung für das Erkennen und Sehen der Freiheit erfüllt. ",
   "an6.50:2.6": "Wie ein Baum mit vollständigen Zweigen und vollem Laubwerk: Seine Schösslinge, seine Rinde, sein Weich- und Kernholz entwickeln sich alle zur Fülle. ",
   "an6.50:2.7": "Ebenso hat, wenn es Zügelung der Sinne gibt, jemand, der die Zügelung der Sinne vervollkommnet hat, eine wesentliche Bedingung für sittliches Verhalten erfüllt. … ",
   "an6.50:2.8": "Wenn es Ernüchterung und Schwinden der Leidenschaft gibt, hat jemand, der Ernüchterung und Schwinden der Leidenschaft vervollkommnet hat, eine wesentliche Bedingung für das Wissen und Sehen der Freiheit erfüllt.“ "
